# LiOAvIZ-Lab6

./: CMakeLists.txt  README.md  Report_6.docx
include/adapters/: console_adapter.h
include/backend/: matrix_gen.h
include/config/: config_loader.h
include/core/: console.h
resources/config_files/: aliases.conf  graph_console.conf
src/: CMakeLists.txt  main.cpp
src/adapters/: console_adapter.cpp
src/backend/: matrix_gen.cpp
src/config/: config_loader.cpp
